Fixing logo alignment for mobile view

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -251,7 +251,6 @@ footer {
   footer {
     .top {
       h4, ul { margin-left: 10% }
-      
       > div { flex-direction: column }
 
       .col-1, .col-2, .col-3 {
@@ -312,7 +311,7 @@ footer {
         flex-direction: column;
         align-items: center;
 
-        .logo { margin-bottom: 20px }
+        .logo { margin: 0 0 20px }
 
         div {
           width: 100%;
